Alteração na escolha maquina

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="result"></p>
         <P id="yourscore">Sua pontuação: <span id="humanscore">0</span></P>
         <p id="scorealexa">Pontuação Alexa: <span id="machinescore">0</span></p>
-
+        <p id="choice"><span id="machinechoice"></span></p>
         <button id="resetButton">Reiniciar Jogo</button>
     
     </main>    
